2011-08-30  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-dir-format): Fix grep.

2011-08-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("\C-xo"): Add win-switch.el

2011-08-23  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Why nyan-wavy-trail no effect in gnu/linux.

2011-08-22  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (nyan-mode): Add nyan-mode.
	(and): Fix nyan-mode.

2011-08-19  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (cfw:open-org-calendar): Update calfw to v1.2

	* init-basic.el (chmod+x): Fix chmod+x.

2011-08-17  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Fix ac-modes.

	* init-toolbar.el (misc-sub-menu): Add multi-term menu item.

2011-08-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix auto-mode-alist.

	* init-misc.el (auto-mode-alist): Fix auto-mode-alist for plsql-mode.

	* init-toolbar.el (language-sub-menu): Add plsql-mode major-mode.

2011-08-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Fix auto-complete for ielm-mode.

2011-08-10  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-cxx-file): Remove warning for set-buffer.

2011-08-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (fboundp): Change cua-rectangle-mark-key to [C-M-return].

	* init-misc.el (sqlplus-mode-hook): Fix sqlplus.

2011-08-02  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (scroll-step): set scroll-step to 1.

	* init-misc.el (plsql-mode): Add plsql.el
	(sqlplus): Add sqlplus.el

	* init-basic.el (grep-dir-format): MinGW's grep support ''.

2011-08-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (require): Bind Ctrl PageUp/PageDown to tabbar-backward/tabbar-forward.

	* init-basic.el ([C-next]): Bind Ctrl PageDown to next-buffer.
	([C-prior]): Bind Ctrl PageUp to previous-buffer.

	* sample/.dir-locals.el: Add.

2011-07-31  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-mode-alist): Setup auto-mode-alist for hexl-mode.
