@@ -622,13 +622,13 @@ Like eclipse's Ctrl+Alt+F."
             (setq imenu-generic-expression text-imenu-generic-expression)
             (imenu-add-menubar-index)))
 
-;; (setq dired-dwim-target t)
-;; (add-hook 'dired-mode-hook
-;;           (lambda ()
-;;             (define-key dired-mode-map (kbd "<return>")
-;;               'dired-find-alternate-file)
-;;             (define-key dired-mode-map (kbd "^")
-;;               (lambda () (interactive) (find-alternate-file "..")))))
+(setq dired-dwim-target t)
+(add-hook 'dired-mode-hook
+          (lambda ()
+            (define-key dired-mode-map (kbd "<return>")
+              'dired-find-alternate-file)
+            (define-key dired-mode-map (kbd "^")
+              (lambda () (interactive) (find-alternate-file "..")))))
 
 (add-hook 'change-log-mode-hook 'turn-on-auto-fill)
 
